--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   material_symbols_icons: ^4.2741.0
+  flutter_datetime_picker_plus: ^2.2.0 
+  intl: ^0.19.0 
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
