--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   intl: ^0.19.0 
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  step_progress_indicator: ^1.0.2 
+  persistent_bottom_nav_bar: ^6.2.1 
 
 dev_dependencies:
   flutter_test:
