--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   equatable: ^2.0.5
   step_progress_indicator: ^1.0.2 
   persistent_bottom_nav_bar: ^6.2.1 
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
