基本頁面建立 以及 圖表初步建立

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   step_progress_indicator: ^1.0.2 
   persistent_bottom_nav_bar: ^6.2.1 
   table_calendar: ^3.1.2
+  flutter_echarts: ^2.5.0
+  webview_flutter: ^4.8.0
+  fl_chart: ^0.68.0 
 
 dev_dependencies:
   flutter_test:
