--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   webview_flutter: ^4.8.0
   fl_chart: ^0.68.0 
   get_it: ^7.7.0
+  flutter_lazy_indexed_stack: ^0.0.6
 
 
 dev_dependencies:
