--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fl_chart: ^0.68.0 
   get_it: ^7.7.0
   flutter_lazy_indexed_stack: ^0.0.6
+  flutter_local_notifications: ^17.2.1+2 
 
 
 dev_dependencies:
